--- a/css/custom.css
+++ b/css/custom.css
@@ -189,11 +189,13 @@ input[type=number]::-webkit-outer-spin-button {
 	color: #333;
 }
 .img-box{
-	width:70%;
-	height:70%;
+	width:90%;
+	height:90%;
 	display: flex;
 	justify-content: center;
 	border-radius: 5px;
+	margin-bottom: 5%;
+	margin-top: 5%;
 }
 .box{
 	margin-top: -5%;
